* depth stencil creation * separated gpu memory properties from graphics class, and wrapped it into its own class with its own helpers. Is currently used when creating depth stencil object (sent along to the factory)

--- a/SimpleTest/SimpleTest.vcxproj
+++ b/SimpleTest/SimpleTest.vcxproj
@@ -134,7 +134,9 @@
     <ClCompile Include="..\include\smallvulkanwrappers\vulkantools.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="VulkanCommandBufferFactory.cpp" />
+    <ClCompile Include="VulkanDepthStencil.cpp" />
     <ClCompile Include="VulkanGraphics.cpp" />
+    <ClCompile Include="VulkanMemoryHelper.cpp" />
     <ClCompile Include="VulkanSwapChain.cpp" />
     <ClCompile Include="Wnd.cpp" />
   </ItemGroup>
@@ -147,6 +149,7 @@
     <ClInclude Include="VulkanDepthStencil.h" />
     <ClInclude Include="VulkanGraphics.h" />
     <ClInclude Include="VulkanHelper.h" />
+    <ClInclude Include="VulkanMemoryHelper.h" />
     <ClInclude Include="VulkanSwapChain.h" />
     <ClInclude Include="Wnd.h" />
   </ItemGroup>
