--- a/SimpleTest/SimpleTest.vcxproj
+++ b/SimpleTest/SimpleTest.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="VulkanCommandBufferFactory.cpp" />
     <ClCompile Include="VulkanGraphics.cpp" />
+    <ClCompile Include="VulkanRenderPassFactory.cpp" />
     <ClCompile Include="VulkanSwapChain.cpp" />
     <ClCompile Include="Wnd.cpp" />
   </ItemGroup>
@@ -147,6 +148,7 @@
     <ClInclude Include="VulkanDepthStencil.h" />
     <ClInclude Include="VulkanGraphics.h" />
     <ClInclude Include="VulkanHelper.h" />
+    <ClInclude Include="VulkanRenderPassFactory.h" />
     <ClInclude Include="VulkanSwapChain.h" />
     <ClInclude Include="Wnd.h" />
   </ItemGroup>
