--- a/SimpleTest/SimpleTest.vcxproj.filters
+++ b/SimpleTest/SimpleTest.vcxproj.filters
@@ -35,6 +35,9 @@
     <ClCompile Include="VulkanCommandBufferFactory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="VulkanRenderPassFactory.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ErrorReporting.h">
@@ -65,6 +68,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="VulkanDepthStencil.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="VulkanRenderPassFactory.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
