* Working on construction of vertex buffers * Support for creating a general buffer object, allocate its gpu memory, copy optional init data to gpu and bind the buffer * Drafts for vertex- and mesh structures * Vertex layout description object for Vulkan

--- a/SimpleTest/SimpleTest.vcxproj
+++ b/SimpleTest/SimpleTest.vcxproj
@@ -88,6 +88,7 @@
     <ClCompile Include="..\include\smallvulkanwrappers\vulkandebug.cpp" />
     <ClCompile Include="..\include\smallvulkanwrappers\vulkantools.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="VulkanBufferFactory.cpp" />
     <ClCompile Include="VulkanCommandBufferFactory.cpp" />
     <ClCompile Include="VulkanDepthStencil.cpp" />
     <ClCompile Include="VulkanGraphics.cpp" />
@@ -101,6 +102,10 @@
     <ClInclude Include="..\include\smallvulkanwrappers\vulkantools.h" />
     <ClInclude Include="DebugPrint.h" />
     <ClInclude Include="ErrorReporting.h" />
+    <ClInclude Include="VulkanMesh.h" />
+    <ClInclude Include="VulkanVertexLayout.h" />
+    <ClInclude Include="Vertex.h" />
+    <ClInclude Include="VulkanBufferFactory.h" />
     <ClInclude Include="VulkanCommandBufferFactory.h" />
     <ClInclude Include="VulkanDepthStencil.h" />
     <ClInclude Include="VulkanGraphics.h" />
