--- a/SimpleTest/SimpleTest.vcxproj.filters
+++ b/SimpleTest/SimpleTest.vcxproj.filters
@@ -44,6 +44,9 @@
     <ClCompile Include="VulkanSwapChain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="VulkanBufferFactory.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\smallvulkanwrappers\vulkandebug.h">
@@ -80,6 +83,18 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="VulkanSwapChain.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Vertex.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="VulkanBufferFactory.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="VulkanVertexLayout.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="VulkanMesh.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
