--- a/SimpleTest/SimpleTest.vcxproj
+++ b/SimpleTest/SimpleTest.vcxproj
@@ -102,6 +102,8 @@
     <ClInclude Include="..\include\smallvulkanwrappers\vulkantools.h" />
     <ClInclude Include="DebugPrint.h" />
     <ClInclude Include="ErrorReporting.h" />
+    <ClInclude Include="MathTypes.h" />
+    <ClInclude Include="VulkanUniformBufferPerFrame.h" />
     <ClInclude Include="VulkanMesh.h" />
     <ClInclude Include="VulkanVertexLayout.h" />
     <ClInclude Include="Vertex.h" />
