* Pipeline creation for simple filled rendering with no culling * Included glsl- and spir-v shaders from vulkan examples with this commit as well for testing later

--- a/SimpleTest/SimpleTest.vcxproj
+++ b/SimpleTest/SimpleTest.vcxproj
@@ -103,6 +103,7 @@
     <ClInclude Include="DebugPrint.h" />
     <ClInclude Include="ErrorReporting.h" />
     <ClInclude Include="MathTypes.h" />
+    <ClInclude Include="VulkanShaderLoader.h" />
     <ClInclude Include="VulkanUniformBufferPerFrame.h" />
     <ClInclude Include="VulkanMesh.h" />
     <ClInclude Include="VulkanVertexLayout.h" />
