* Updated to Vulkan 1.0.37.0 * Updated VulkanTools and VulkanDebug * Added a Vulkan object wrapper for RAII handling of Vulkan objects (TODO: implement usage of it) * TODO: Fix current runtime error (GetPhysicalDeviceSurfaceSupportKHR). Move queue idx checking from VulkanGraphics to VulkanSwapChain and split up VulkanSwapChain into several methods (separate function pointers creation). As we need to create it before the device, but some parts needs to be created with the device.

--- a/SimpleTest/SimpleTest.vcxproj
+++ b/SimpleTest/SimpleTest.vcxproj
@@ -100,9 +100,11 @@
   <ItemGroup>
     <ClInclude Include="..\include\smallvulkanwrappers\vulkandebug.h" />
     <ClInclude Include="..\include\smallvulkanwrappers\vulkantools.h" />
+    <ClInclude Include="D:\Downloads\Vulkan-master (1)\Vulkan-master\base\VulkanInitializers.hpp" />
     <ClInclude Include="DebugPrint.h" />
     <ClInclude Include="ErrorReporting.h" />
     <ClInclude Include="MathTypes.h" />
+    <ClInclude Include="VkObj.h" />
     <ClInclude Include="VulkanShaderLoader.h" />
     <ClInclude Include="VulkanUniformBufferPerFrame.h" />
     <ClInclude Include="VulkanMesh.h" />
